--- a/html/css/system.css
+++ b/html/css/system.css
@@ -84,3 +84,19 @@ body {
 .top_btn_1:hover {
     background-color: #00FF00
 }
+
+.btn_3 {
+    width: calc(33% - 10px);
+    height: 70px;
+    background-color: rgba(0, 0, 0, 0);
+    border: 3px solid #00FF00;
+    color: #00FF00;
+    margin-left: 5px ;
+    margin-top: 10px;
+}
+
+.btn_3:hover {
+    background-color: #00FF00;
+    color:black;
+    box-shadow: 0px 0px 20px #00FF00;
+}
